--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,15 @@ edition = "2018"
 concurrent-queue = "1.2.2"
 event-listener = "2.4.0"
 futures-core = "0.3.5"
+parking_lot = "0.11.1"
 
 [dev-dependencies]
 blocking = "0.6.0"
 easy-parallel = "3.1.0"
 futures-lite = "1.0.0"
+criterion = "0.3"
+flume = "0.10"
+
+[[bench]]
+name = "benches"
+harness = false
