--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ edition = "2018"
 [dependencies]
 concurrent-queue = "1.2.2"
 event-listener = "2.4.0"
-futures-core = "0.3.5"
 parking_lot = "0.11.1"
+bytes = "1"
+mqttbytes = "*"
 
 [dev-dependencies]
 blocking = "0.6.0"
